[package]
name = "tracing"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
tracing-common = { path = "../tracing-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time"
] }
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
tracing-ebpf = { path = "../tracing-ebpf" }

[[bin]]
name = "tracing"
path = "src/main.rs"
